Fixed spacing issue in homepage.

--- a/frontend/src/components/Marquee/MainMarquee.scss
+++ b/frontend/src/components/Marquee/MainMarquee.scss
@@ -43,7 +43,7 @@
 
   @media screen and (max-width: 768px) {
     height: 300px;
-    top: 90%;
+    top: 95%;
 
     &-item-container {
       padding: 10px;
