--- a/frontend/src/containers/EpisodesSlider/EpisodesSlider.scss
+++ b/frontend/src/containers/EpisodesSlider/EpisodesSlider.scss
@@ -27,7 +27,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    padding: 6rem 0 2rem 0;
+    padding: 10rem 0 2rem 0;
     width: 90%;
     margin-top: 0;
   }
